# VPN

./: Cargo.toml  Dockerfile  Rust VPN.postman_collection.json  VPN.postman_collection.json  readme.md
sql/: add_ip.sql  add_user.sql  change_password.sql  check_user_password_valid.sql  get_ip_by_ip.sql  get_ips_from_user_id.sql  get_user_by_email.sql  get_user_by_id.sql  schema.sql
src/: lib.rs  main.rs  utils.rs  wireguard.rs
src/controller/: admin_controller.rs  mod.rs  user_controller.rs
src/database/: postgres.rs
src/errors/: mod.rs
src/model/: ip.rs  mod.rs  user.rs
src/models/: mod.rs  user.rs
src/models/peers/: mod.rs  peer_config.rs  peer_mapper.rs
src/service/: ip_service.rs  mod.rs  user_service.rs
src/utils/: base64utils.rs  key_generation_utils.rs  mod.rs  tunneling_utils.rs
