[package]
name = "vpn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
wiretun = { version = "*", features = ["uapi"] }
async-trait = "0.1"
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
base64 = "0.21"
pnet = "0.33"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
